# claudebar

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING-themes.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-preview.md  README.md  RELEASING.md  SECURITY.md  Taskfile.yml  cliff.toml  install.sh  renovate.json  skills-lock.json  statusline-command.sh  zizmor.yml
.claude/: CLAUDE.md
.github/workflows/: benchmark.yml  homebrew-app-token.yml  pages.yml  probe-tmp.yml  release.yml  renovate.yml  rust.yml  security.yml  verify-install.yml
.planning/: ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/03-release-pipeline/: 03-01-PLAN.md
.planning/phases/04-install-script/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/variants/: README.md
docs/: index.html  styles.css
docs/assets/: sample-session.json
fixtures/: bad_types.json  dev_context.json  effort_max.json  huge_tokens.json  injection.json  missing_resets.json  no_effort.json  no_git.json  over_100_context.json  over_limit_5h.json  weekly_at_50.json  weekly_below_50.json
memory:/root/skills/: claudebar-session-knowledge.md
scripts/: SUMMARY.md  ansi2html.py  benchmark.sh  demo_intro.py  gen-gallery.sh  gen_logos.py  gen_logos_alt.py  gen_screenshots.py  gen_social_preview.py  gen_terminal_gifs.sh  gen_tui_screenshot.py  make_demo_repos.sh  take_screenshots.js  window_frame.py
src/: cli.rs  lib.rs  main.rs  sanitize.rs  setup.rs
src/model/: config.rs  input.rs  mod.rs  palette.rs  style.rs
src/render/: bar.rs  float.rs  mod.rs  width.rs  writer.rs
src/segment/: burn.rs  clock.rs  context.rs  cost.rs  dev_context.rs  directory.rs  duration.rs  effort.rs  git.rs  limit_sync.rs  lines.rs  mod.rs  model.rs  project.rs  rate_limits.rs  stash.rs
src/styles/: ascii.rs  lean.rs  minimal.rs  mod.rs  plain.rs  powerline.rs  rounded.rs  unicode.rs
src/themes/: ayu_mirage.rs  catppuccin.rs  cobalt2.rs  dracula.rs  everforest_dark.rs  github_dark.rs  gruvbox.rs  kanagawa_wave.rs  mod.rs  moonfly.rs  night_owl.rs  nord.rs  one_dark.rs  rose_pine.rs  solarized_dark.rs  sonokai.rs  tokyo_night.rs
src/tui/: app.rs  mod.rs  preview.rs  sample.rs  ui.rs
tests/: cli_main_dispatch.rs  cli_smoke.rs  demo_repos.bats  install.bats  render_golden.rs  scripts.bats  statusline.bats
tests/snapshots/: render_golden__golden_lines@bad_types.json.snap  render_golden__golden_lines@dev_context.json.snap  render_golden__golden_lines@effort_max.json.snap  render_golden__golden_lines@empty.json.snap  render_golden__golden_lines@huge_tokens.json.snap  render_golden__golden_lines@injection.json.snap  render_golden__golden_lines@missing_resets.json.snap  render_golden__golden_lines@no_effort.json.snap  render_golden__golden_lines@no_git.json.snap  render_golden__golden_lines@over_100_context.json.snap  render_golden__golden_lines@over_limit_5h.json.snap  render_golden__golden_lines@typical.json.snap  render_golden__golden_lines@weekly_at_50.json.snap  render_golden__golden_lines@weekly_below_50.json.snap  render_golden__golden_matrix@ayu-mirage__ascii.snap  render_golden__golden_matrix@ayu-mirage__powerline.snap  render_golden__golden_matrix@catppuccin__ascii.snap  render_golden__golden_matrix@catppuccin__powerline.snap  render_golden__golden_matrix@cobalt2__ascii.snap  render_golden__golden_matrix@cobalt2__powerline.snap  render_golden__golden_matrix@dracula__ascii.snap  render_golden__golden_matrix@dracula__powerline.snap  render_golden__golden_matrix@everforest-dark__ascii.snap  render_golden__golden_matrix@everforest-dark__powerline.snap  render_golden__golden_matrix@github-dark__ascii.snap  render_golden__golden_matrix@github-dark__powerline.snap  render_golden__golden_matrix@gruvbox__ascii.snap  render_golden__golden_matrix@gruvbox__powerline.snap  render_golden__golden_matrix@kanagawa-wave__ascii.snap  render_golden__golden_matrix@kanagawa-wave__powerline.snap  render_golden__golden_matrix@moonfly__ascii.snap  render_golden__golden_matrix@moonfly__powerline.snap  render_golden__golden_matrix@night-owl__ascii.snap  render_golden__golden_matrix@night-owl__powerline.snap  render_golden__golden_matrix@nord__ascii.snap  render_golden__golden_matrix@nord__powerline.snap  render_golden__golden_matrix@one-dark__ascii.snap  render_golden__golden_matrix@one-dark__powerline.snap  render_golden__golden_matrix@rose-pine__ascii.snap  render_golden__golden_matrix@rose-pine__powerline.snap  (+8 more)
video/: .gitignore  PILL-DESIGN-NOTES.md  context.md  index.html  project-plan.md  storyboard.md
video/renders/work-ba3cd3bc-04c4-40ed-bb05-ba20b77f6701-VLYtaC/compiled/: index.html
video/renders/work-ba3cd3bc-04c4-40ed-bb05-ba20b77f6701-VLYtaC/compiled/scenes/: 05-cta.html
video/scenes/: 00-logo.html  01-strip.html  02-features.html  02-live-states.html  02-states.html  03-features.html  03-speed.html  04-cta.html  04-speed.html  05-cta.html
video/scripts/: crop_segments.py  crop_segments_states.py  gen_optional_segments.py
