[package]
name = "claudebar"
version = "2026.6.20"
edition = "2024"
description = "Powerline-style statusline for Claude Code, with a TUI configurator, themes and styles"
license = "MIT"
repository = "https://github.com/micschr0/claudebar"
readme = "README.md"
keywords = ["statusline", "claude-code", "powerline", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "claudebar"
path = "src/main.rs"

[features]
default = ["tui"]
# The TUI configurator. Disable for a minimal render-only hook:
#   cargo build --release --no-default-features
tui = ["dep:ratatui", "dep:crossterm", "dep:ansi-to-tui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

# TUI-only (feature-gated, never linked on the render hot path)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
ansi-to-tui = { version = "7", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["filters", "glob"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
