[package]
name = "claudebar"
version = "2026.7.9-beta.3"
edition = "2024"
description = "Powerline-style statusline for Claude Code, with a TUI configurator, themes and styles"
license = "MIT"
repository = "https://github.com/micschr0/claudebar"
homepage = "https://micschr0.github.io/claudebar"
documentation = "https://micschr0.github.io/claudebar"
readme = "README.md"
keywords = ["statusline", "claude-code", "powerline", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claudebar"
path = "src/main.rs"

[features]
default = ["tui"]
# The TUI configurator. Disable for a minimal render-only hook:
#   cargo build --release --no-default-features
tui = ["dep:ratatui", "dep:crossterm", "dep:ansi-to-tui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros", "local-offset"] }

# TUI-only (feature-gated, never linked on the render hot path)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
ansi-to-tui = { version = "8", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["filters", "glob"] }
[profile.dev]
debug = 1

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1

# cargo-dist builds release artifacts with --profile dist by convention.
[profile.dist]
inherits = "release"

[workspace.metadata.dist]
# Pin the dist version that generated release.yml. Regenerate deliberately on bump;
# the CI guard installs this exact version so the pipeline cannot silently drift.
cargo-dist-version = "0.32.0"
# musl is NOT in dist's default suite — list all 4 targets explicitly.
targets = [
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
]
# Hosted shell installer (curl | sh) as a binary-only alternative to install.sh.
installers = ["shell", "homebrew"]
# Bundle the binary plus auto-detected README + LICENSE (both at repo root).
auto-includes = true
# SHA256, sha256sum-compatible output.
checksum = "sha256"
# Embed dependency info for cargo audit bin scanning
auditable = true
tap = "micschr0/homebrew-tap"
publish-jobs = ["./homebrew-app-token"]
# Pin .tar.gz (not dist's .tar.xz default) to preserve the existing release-URL
# contract and keep the install.sh diff minimal.
unix-archive = ".tar.gz"
ci = ["github"]
# We pin actions to commit SHAs in release.yml for zizmor compliance,
# which diverges from what cargo-dist generates. Accept this drift.
allow-dirty = ["ci"]
hosting = ["github"]

# Pin only the ARM macOS build to macos-14. The Intel macOS build uses dist's default
# runner image (its old fixed pin was dropped — GitHub is retiring that hosted runner).
# linux musl targets default to an ubuntu runner — left unset.
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
